objects/ZHFMCode__c.object
<CustomObject>
    <description>Used for storing HFM Codes used in Billing Account creation and update Visualforce pages (GoDigital)</description>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>HFM Codes</relationshipLabel>
        <relationshipName>HFM_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>HFM Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>HFM Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>HFM Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HFM Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>